--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true //스프링2.5부턴 data.sql을 이용한 데이터 초기화 권장안하므로
