--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true //스프링2.5부턴 data.sql을 이용한 데이터 초기화 권장안하므로
+
+# JPA 로깅 설정
+# 디버그 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL=DEBUG
+# 쿼리 줄바꿈하기
+spring.jpa.properties.hibernate.format_sql=true
+# 매개변수 값 보여 주기
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# DB URL 설정
+# 유티크 URL 생성하지 않기
+spring.datasource.generate-unique-name=false
+# 고정 URL 설정하기
+spring.datasource.url=jdbc:h2:mem:testdb
